--- a/House_Sales_in_King_Count_USA.ipynb
+++ b/House_Sales_in_King_Count_USA.ipynb
@@ -651,17 +651,15 @@
       "source": "<p>Once you complete your notebook you will have to share it. You can download the notebook by navigating to \"File\" and clicking on \"Download\" button.\n        <p><img width=\"600\" src=\"https://cf-courses-data.s3.us.cloud-object-storage.appdomain.cloud/IBMDeveloperSkillsNetwork-DA0101EN-SkillsNetwork/labs/Module%206/images/DA0101EN_FA_Image21.png\" alt=\"share notebook\" style=\"display: block; margin-left: auto; margin-right: auto;\"></p>\n        <p></p>\n<p>This will save the (.ipynb) file on your computer. Once saved, you can upload this file in the \"My Submission\" tab, of the \"Peer-graded Assignment\" section.  \n          \n",
       "metadata": {}
     },
-    {
-      "cell_type": "markdown",
-      "source": "<h2>About the Authors:</h2> \n\nDesiree' Salvant ?utm_medium=Exinfluencer&utm_source=Exinfluencer&utm_content=000026UJ&utm_term=10006555&utm_id=NA-SkillsNetwork-Channel-SkillsNetworkCoursesIBMDeveloperSkillsNetworkDA0101ENSkillsNetwork20235326-2022-01-01\">Joseph Santarcangelo</a> has a PhD in Electrical Engineering, his research focused on using machine learning, signal processing, and computer vision to determine how videos impact human cognition. Joseph has been working for IBM since he completed his PhD.\n",
-      "metadata": {}
-    },
-    {
-      "cell_type": "markdown",
-      "source": "Other contributors: <a href=\"https://www.linkedin.com/in/michelleccarey/?utm_medium=Exinfluencer&utm_source=Exinfluencer&utm_content=000026UJ&utm_term=10006555&utm_id=NA-SkillsNetwork-Channel-SkillsNetworkCoursesIBMDeveloperSkillsNetworkDA0101ENSkillsNetwork20235326-2022-01-01\">Michelle Carey</a>, <a href=\"https://www.linkedin.com/in/jiahui-mavis-zhou-a4537814a?utm_medium=Exinfluencer&utm_source=Exinfluencer&utm_content=000026UJ&utm_term=10006555&utm_id=NA-SkillsNetwork-Channel-SkillsNetworkCoursesIBMDeveloperSkillsNetworkDA0101ENSkillsNetwork20235326-2022-01-01\">Mavis Zhou</a>\n",
-      "metadata": {}
-    },
-   
+   {
+  "cell_type": "markdown",
+  "metadata": {},
+  "source": [
+    "<h2>About the Author:</h2>\n",
+    "Desiree' Salvant is a data science and HR professional with a background in business management and employee engagement. Her work focuses on applying data analytics and machine learning to transform HR practices such as recruitment analytics, workforce planning, and training effectiveness. Passionate about using data for impact, she is committed to leveraging AI to drive innovation in people analytics and organizational development."
+  ]
+}
+       
     {
       "cell_type": "code",
       "source": "",
