--- a/House_Sales_in_King_Count_USA.ipynb
+++ b/House_Sales_in_King_Count_USA.ipynb
@@ -651,16 +651,14 @@
       "source": "<p>Once you complete your notebook you will have to share it. You can download the notebook by navigating to \"File\" and clicking on \"Download\" button.\n        <p><img width=\"600\" src=\"https://cf-courses-data.s3.us.cloud-object-storage.appdomain.cloud/IBMDeveloperSkillsNetwork-DA0101EN-SkillsNetwork/labs/Module%206/images/DA0101EN_FA_Image21.png\" alt=\"share notebook\" style=\"display: block; margin-left: auto; margin-right: auto;\"></p>\n        <p></p>\n<p>This will save the (.ipynb) file on your computer. Once saved, you can upload this file in the \"My Submission\" tab, of the \"Peer-graded Assignment\" section.  \n          \n",
       "metadata": {}
     },
-  {
+ {
   "cell_type": "markdown",
   "metadata": {},
-  "source": [
-    "## About the Author:\n",
-    "Desiree' Salvant is a data science and HR professional with a background in business management and employee engagement.\n",
-    "Her work focuses on applying data analytics and machine learning to transform HR practices such as recruitment analytics, workforce planning, and training effectiveness.\n",
-    "She is passionate about using AI to drive innovation in people analytics and organizational development."
-  ]
-}
+  "source": 
+    "<h2>About the Author:</h2>\n",
+    "<p><strong>Desiree' Salvant</strong> is a data science and HR professional with a passion for People Analytics, workforce development, and employee engagement. She combines her background in business, data, and HR to develop strategies powered by analytics and AI for better organizational decision-making.</p>\n",
+    "<p>Connect with me on <a href=\"https://www.linkedin.com/in/desireesalvant/\" target=\"_blank\">LinkedIn</a>.</p>"
+  }
        
     {
       "cell_type": "code",
